tests/NormalTests/paczka1/small_fuzzy/11396904.err
Error in line 1: nenJ S873 50,8
Error in line 8: uR6I S873 12,7
Error in line 10: uR6I S851 41,2
Error in line 13: eAUX A865 70,4
